--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
     margin: 0;
     padding: 0;
     font-family: "TT Lakes" , sans-serif;
-    font-size: 14px;
 }
 
 .page {
@@ -23,13 +22,6 @@
     background-color: #FFFFFF;
 }
 
-.service__title {
-    font-size: 28px;
-    border-left: #41F6D7 solid 5px;
-    padding-left: 10px;
-    margin-top: 20px;
-}
-
 .header__icon, .header__link {
     background-color: #FF3E79;
     border-radius: 80%;
@@ -44,6 +36,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    column-gap: 10px;
 }
 
 .header__icon--left,
@@ -55,24 +48,31 @@
 .header__nav {
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    margin-left: 5px;
+
+}
+
+.header__line {
+    margin-right: 5px;
 }
 
 .header__divider {
     display: none;
 }
 
-.header__nav {
-    padding-left: 20px;
-    margin-top: 5px;
-}
-
-.header__hamburger {
-    padding-right: 10px;
-}
 
 .service {
     display: flex;
     justify-content: space-between;
+}
+
+.service__title {
+    font-size: 28px;
+    border-left: #41F6D7 solid 5px;
+    padding-left: 13px;
+    margin-top: 20px;
+    margin-bottom: 15px;
 }
 
 .service__actions {
@@ -82,28 +82,34 @@
 }
 
 .header__menu {
-    display: none; /* Скрыто на мобильных */
+    display: none; 
     list-style: none;
 }
 
 .header__menu--hidden {
-    display: none; /* Скрыто на мобильных */
+    display: none; 
     list-style: none;
     align-items: center;
 }
 
 .scroll-nav {
     display: flex;
+    overflow-x: auto;
     justify-content: space-around;
+    white-space: nowrap;
     margin-top: 10px;
     font-size: 16px;
     font-weight: 500;
     color: #7E7E82;
+    margin-left: 20px;
+
+
 }
 
 .scroll-nav__item:hover {
     border: #41F6D7 solid 2px;
     border-radius: 5px;
+    background-color: #FFFFFF;
 }
 
 .header__button {
@@ -122,17 +128,10 @@
     align-items: center;
 }
 
-
-.scroll-nav {
-    display: flex;
-    overflow-x: auto;
-    white-space: nowrap;
-    padding: 10px 0;
-    margin-left: 10px;
-}
-
 .scroll-nav__item {
-    padding: 5px 10px;
+    padding: 5px 15px 5px 15px;
+    font-size: 16px;
+    line-height: 24px;
 }
 
 .scroll-nav__separator {
@@ -164,11 +163,20 @@
     padding: 20px;
 }
 
+.about__text {
+    font-size: 14px;
+    line-height: 18px;
+    margin: 20px 20px 25px 20px;
+}
+
 .about__more {
     display: flex;
-    justify-content: flex-start;
+    justify-content: left;
+    gap: 5px;
     align-items: center;
     font-size: 16px;
+    font-weight: 500;
+    margin-top: 20px;
 }
 
 .about__paragraph--tablet,
@@ -195,17 +203,16 @@
         align-items: center;
     }
 
-    .about {
-        flex-direction: row;
-        flex-wrap: wrap;
-    }
-
-    .header__hamburger {
+    .header__line {
         display: none;
     }
 
     .header__divider {
         display: inline-block;
+    }
+
+    .service__title {
+        padding-left: 15px;
     }
 
     .about__paragraph--tablet {
@@ -217,12 +224,14 @@
     }
 
     .about__text {
-        padding-right: 44px;
+        padding-right: 46px;
+        margin-top: 0;
+        margin-left: 25px;
     }
 
     .content {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         margin-top: 30px;
     }
 
@@ -230,7 +239,7 @@
         width: 360px;
         height: 208px;
         border-radius: 3%;
-        margin-right: 20px;
+        margin-right: 15px;
     }
 
     .header__icons {
@@ -283,7 +292,7 @@
         width: 531.35px;
         height: 307px;
         border-radius: 1%;
-        margin-right: 30px;
+        margin-right: 25px;
     }
 
     .header {
@@ -296,10 +305,8 @@
 
     .service__actions {
         display: flex;
-        justify-content: space-between;
         align-items: center;
         margin-top: 20px;
-
     }
 
     .service__button {
@@ -312,21 +319,26 @@
         justify-content: center;
         align-items: center;
         margin-right: 20px;
-
     }
+    
+    .service__title {
+        padding-left: 35px;
+    }
+    
     .service__actions label {
         margin-right: 10px;
     }
     
     #service__button--repair {
-        margin-right: 50px;
+        margin-right: 35px;
     }
 
     .about__more {
         margin-bottom: 80px;
     }
-
+    
     .about__text {
-        padding-right: 20px;
+        margin-left: 20px;
+        margin-right: 0;
     }
 }
